@@ -1,3 +1,13 @@
+2011-03-22 Stefan Bidigaray <stefanbidi@gmail.com>
+
+	* Source/CFRuntime.m: Moved NSCFType definition...
+	* Source/NSCFType.m: ...To here.
+	* Source/NSCFType.h: NSCFType interface.
+	* Source/GNUmakefile: Added NSCFType.m.
+	* Headers/CoreFoundation/CFRuntime.h: Additional ivars to help
+	identify CF types.
+	* Tests/CFRuntime/runtime.m: Initial CFRuntime tests.
+
 2011-03-20 Stefan Bidigaray <stefanbidi@gmail.com>
 
 	* Source/CFRuntime.m: Minor changes to make CF types more ObjC friendly.
